2007-10-17  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcutbase.ui:
		New layout for the label/input area.

2007-10-13  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Build dvbcut with -g and place a stripped copy in bin.

2007-10-12  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/settings.cpp:
	* src/settings.h:
		Do not load settings until they are needed.

	* src/dvbcut.cpp:
	* src/eventlistitem.cpp:
		Use new settings interface.
 
2007-10-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcutbase.ui:
		Add/change accelerators.

2007-10-10  Michael Kreuzer  <michael-kreuzer@gmx.de>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
	* src/dvbcutbase.ui:
		Add "save snapshot" function to file menu and toolbar

2007-10-08  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Use multi-line labels.

2007-10-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
	* src/dvbcut.h:
		Add "suggest markers" function based on aspect ratio changes.

	* src/dvbcutbase.ui:
		Add "suggest markers" to edit menu.

	* src/mpgfile.h:
		Add aspect discontinuity finder function.

2007-10-07  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/index.cpp:
		Never write the (binary) index to a terminal.

2007-10-07  Sven Over  <svenover@svenover.de>

	* src/dvbcut.h:
	* src/dvbcut.cpp:
	* src/eventlistitem.h:
		Display output timecode and picture number.

	* src/dvbcut.cpp:
		Evaluate 'expfile' tag or attribute.

2007-10-05  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/buffer.cpp:
	* src/buffer.h:
		Implement "pipe mode" for reading from non-regular files.

	* src/index.cpp:
	* src/index.h:
		Add separate function for saving to stdout.

	* src/main.cpp:
		Allow -generateidx to read from stdin again.

2007-09-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/defines.h:
		Move default values to src/settings.cpp.

	* src/eventlistitem.cpp: